fix: prevent strange wrapping behaviour on longer labels

--- a/components/SideNavigation/src/index.scss
+++ b/components/SideNavigation/src/index.scss
@@ -37,6 +37,13 @@
   }
 }
 
+.denhaag-side-navigation__tree-item-label-wrapper {
+  display: flex;
+  flex-basis: 100%;
+  flex-direction: row;
+  align-items: center;
+}
+
 .denhaag-side-navigation__link {
   text-decoration: none;
   color: var(--denhaag-side-navigation-link-color);
@@ -78,7 +85,7 @@
   justify-content: center;
   align-items: center;
   transform: var(--denhaag-side-navigation-expand-button-transform, rotate(0deg));
-  transition: var(--denhaag-side-navigation-expand-button-transition, transform 200ms ease-in-out);
+  transition: var(--denhaag-side-navigation-expand-button-transition, "transform 200ms ease-in-out");
 
   @media (prefers-reduced-motion) {
     transition: none;
@@ -91,12 +98,13 @@
 }
 
 .denhaag-side-navigation__expand-separator {
+  flex-shrink: 0;
   display: inline-block;
   color: var(--denhaag-side-navigation-expand-separator-color);
   background-color: currentColor;
-  inline-size: var(--denhaag-side-navigation-expand-separator-inline-size);
-  padding-block-end: var(--denhaag-side-navigation-expand-separator-padding-block-end);
-  padding-block-start: var(--denhaag-side-navigation-expand-separator-padding-block-start);
-  margin-inline-end: var(--denhaag-side-navigation-expand-separator-margin-block-end);
-  margin-inline-start: var(--denhaag-side-navigation-expand-separator-margin-block-start);
+  inline-size: var(--denhaag-side-navigation-expand-separator-inline-size, 1px);
+  padding-block-end: var(--denhaag-side-navigation-expand-separator-padding-block-end, 8px);
+  padding-block-start: var(--denhaag-side-navigation-expand-separator-padding-block-start, 8px);
+  margin-inline-end: var(--denhaag-side-navigation-expand-separator-margin-block-end, 8px);
+  margin-inline-start: var(--denhaag-side-navigation-expand-separator-margin-block-start, 8px);
 }
